# AndroidPartyGame

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/edu/fsu/cs/cop4656/kingdomparty/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Info.hpp
app/src/main/cpp/client/: main.cpp
app/src/main/cpp/client/lobby/: NetStage.hpp
app/src/main/cpp/client/match/: Match.cpp  Match.hpp  NetStage.cpp  NetStage.hpp
app/src/main/cpp/client/prelogin/: NetStage.cpp
app/src/main/cpp/game/: MapData.cpp  MapData.hpp  MatchData.cpp  MatchData.hpp  PlayerData.hpp  UserData.hpp
app/src/main/cpp/net/: Connection.hpp  NetStage.cpp  PacketId.hpp
app/src/main/cpp/net/lobby/: CreateMatchPacket.hpp  MatchListPacket.cpp  NetStage.cpp  NetStage.hpp  RequestMatchListPacket.cpp  RequestMatchListPacket.hpp
app/src/main/cpp/net/match/: DiceRollPacket.cpp  DiceRollPacket.hpp  MatchStartDataPacket.hpp  MinigameEndPacket.hpp  MinigameStateDataPacket.cpp  Packets.hpp
app/src/main/cpp/net/prelogin/: LoginPacket.hpp  LoginStatusCode.hpp  NetStage.hpp  Packets.hpp  RegisterPacket.hpp
app/src/main/cpp/util/: Logger.cpp
app/src/main/java/edu/fsu/cs/cop4656/kingdomparty/: CreateMatchFragment.java  HelpActivity.java  LoginActivity.java  MainActivity.java  MatchesFragment.java  Native.java  ProfileFragment.java
app/src/main/res/layout/: activity_help.xml  activity_login.xml  activity_main.xml  fragment_create_match.xml  fragment_matches.xml  fragment_profile.xml  nav_header_profile.xml
app/src/main/res/menu/: activity_profile_drawer.xml  profile.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/edu/fsu/cs/cop4656/kingdomparty/: ExampleUnitTest.java
gameserver/: README.md
gameserver/maps/: test.txt
gameserver/res/dejavu/: spacechase0_note.txt
gameserver/src/: Info.hpp  PartyGame.cbp  Util.cpp  Util.hpp
gameserver/src/client/: Client.cpp  Client.hpp  main.cpp
gameserver/src/client/lobby/: NetStage.cpp  NetStage.hpp
gameserver/src/client/match/: Match.cpp  Match.hpp  NetStage.cpp  NetStage.hpp
gameserver/src/client/prelogin/: NetStage.cpp  NetStage.hpp
gameserver/src/game/: MapData.cpp  MapData.hpp  MatchData.cpp  PlayerData.cpp  PlayerData.hpp  TileData.hpp  UserData.cpp  UserData.hpp
gameserver/src/net/: Buffer.cpp  Buffer.hpp  Connection.cpp  Connection.hpp  NetStage.cpp  NetStage.hpp  Packet.cpp  Packet.hpp  PacketId.hpp  SimplePacket.cpp  SimplePacket.hpp
gameserver/src/net/game/: NetStage.cpp  NetStage.hpp  Packets.hpp
gameserver/src/net/lobby/: CreateMatchPacket.cpp  JoinMatchPacket.cpp  JoinMatchPacket.hpp  MatchListPacket.hpp  MatchStatusCode.hpp  MatchStatusPacket.cpp  MatchStatusPacket.hpp  NetStage.cpp  PacketId.hpp  Packets.hpp
gameserver/src/net/match/: DiceRollPacket.cpp  DiceRollPacket.hpp  MatchStartDataPacket.cpp  MatchStartDataPacket.hpp  MinigameEndPacket.cpp  MinigameInputDataPacket.cpp  MinigameInputDataPacket.hpp  MinigameStartPacket.cpp  MinigameStartPacket.hpp  MinigameStateDataPacket.hpp  NetStage.cpp  NetStage.hpp  Packets.hpp  TurnOrderPacket.cpp  TurnOrderPacket.hpp
gameserver/src/net/prelogin/: LoginPacket.cpp  LoginPacket.hpp  LoginStatusPacket.cpp  LoginStatusPacket.hpp  NetStage.cpp  NetStage.hpp  PacketId.hpp  ProtocolVersionPacket.cpp  ProtocolVersionPacket.hpp  RegisterPacket.cpp  RegisterPacket.hpp
gameserver/src/server/: Client.cpp  Client.hpp  ClientTransition.cpp  ClientTransition.hpp  DummyUserDatabase.cpp  DummyUserDatabase.hpp  ITransitioner.cpp  ITransitioner.hpp  IUserDatabase.cpp  IUserDatabase.hpp  Lobby.cpp  Lobby.hpp  Match.cpp  Match.hpp  Server.cpp  Server.hpp  main.cpp
gameserver/src/server/lobby/: NetStage.cpp  NetStage.hpp
gameserver/src/server/match/: NetStage.cpp  NetStage.hpp
gameserver/src/server/prelogin/: NetStage.cpp  NetStage.hpp
